--- a/geography/static/po/de.po
+++ b/geography/static/po/de.po
@@ -4,13 +4,51 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
-"PO-Revision-Date: 2015-09-13 11:41+0000\n"
+"PO-Revision-Date: 2015-10-04 19:20+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: German (http://www.transifex.com/adaptive-learning/slepemapycz/language/de/)\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: static/tpl/about.html:93
+msgid "- administrativní členění Itálie, Francie a Španělska"
+msgstr ""
+
+#: static/tpl/about.html:98
+msgid "- města České republiky a Slovenska"
+msgstr ""
+
+#: static/tpl/about.html:109
+msgid "- vlaječky ostatních administrativních celků"
+msgstr ""
+
+#: static/tpl/about.html:105
+msgid "- vlaječky států světa a USA"
+msgstr ""
+
+#: static/tpl/about.html:88
+msgid ""
+"- zdroj většiny mapových podkladů (svět, kontinenty,\n"
+"        většina států)"
+msgstr ""
+
+#: static/tpl/about.html:55
+msgid ""
+"<i class=\"flag-cs\"></i> Česká a <i class=\"flag-en\"></i> Anglická verze\n"
+"        systému je dílem výše uvedených vývojářů."
+msgstr ""
+
+#: static/tpl/about.html:62
+msgid ""
+"<i class=\"flag-de\"></i> Německý překlad vytvořila Petra Moskva a její\n"
+"        studentky z Gymnázia a Obchodní Akdemie Orlová."
+msgstr ""
+
+#: static/tpl/about.html:59
+msgid "<i class=\"flag-es\"></i> Španělský překlad vytvořil Benjamin Valdes."
+msgstr ""
 
 #: static/tpl/homepage.html:76
 msgid "Adaptabilní procvičování"
@@ -28,6 +66,14 @@ msgstr "Profiladresse"
 msgid "Aktuální úroveň"
 msgstr "Aktuelles Level"
 
+#: static/tpl/about.html:115
+msgid ""
+"Aplikace byla oceněna v Soutěži \n"
+"      <a href=\"http://www.otevrenadata.cz/\">Společně otevíráme data</a>,\n"
+"       pořádané \n"
+"      <a href=\"http://www.motejl.cz/\">Fondem Otakara Motejla</a>."
+msgstr ""
+
 #: static/js/services.js:347
 msgid "Autonomní společenství"
 msgstr "Autonomiegebiete"
@@ -44,11 +90,19 @@ msgstr "Möchten Sie eine andere? Schauen Sie sich weiteren Landkarten an"
 msgid "Chybné odpovědi"
 msgstr "Falsche Antworten"
 
+#: static/tpl/about.html:77
+msgid ""
+"Data o odpovědích jsou ukládána a jsou využívána pro výběr vhodných otázek a"
+" pro výzkumné účely. Všechna tato data jsou zpracovávána anonymně. "
+"Přihlašovací údaje (Facebook, Google) jsou použity pouze pro určení identity"
+" při opakovaných návštěvách, jinak se s nimi nepracuje."
+msgstr ""
+
 #: static/tpl/user_tpl.html:30
 msgid "E-mail"
 msgstr "E-Mail"
 
-#: static/js/controllers.js:393
+#: static/js/controllers.js:400
 msgid "Hledaný profil neexistuje."
 msgstr ""
 
@@ -68,7 +122,11 @@ msgstr "Seen"
 msgid "Jméno"
 msgstr "Vorname"
 
-#: static/js/controllers.js:275
+#: static/tpl/about.html:6
+msgid "Kdo za tím stojí"
+msgstr ""
+
+#: static/js/controllers.js:282
 msgid "Kontinenty"
 msgstr "Kontinenten"
 
@@ -79,6 +137,10 @@ msgstr "Regionen"
 #: static/tpl/practice_tpl.html:104
 msgid "Mapa znalostí"
 msgstr "Karte der Kenntnisse"
+
+#: static/tpl/about.html:16
+msgid "Mezi další projekty této skupiny patří:"
+msgstr ""
 
 #: static/tpl/map_tpl.html:11
 msgid "Moje znalosti"
@@ -96,6 +158,11 @@ msgstr "Städte"
 msgid "Můj profil je veřejný"
 msgstr ""
 
+#: static/tpl/about.html:37
+msgid ""
+"Na vývoji Slepých map se podílí především Vít Stanislav a Jan Papoušek."
+msgstr ""
+
 #: static/js/directives.js:107
 msgid "Naučeno"
 msgstr "erlernt"
@@ -108,13 +175,27 @@ msgstr "nicht geübt"
 msgid "Nevím"
 msgstr "Ich weiß nicht"
 
+#: static/tpl/about.html:47
+msgid ""
+"Náměty k rozvoji systému zasílejte na \n"
+"    <span class=\"email contact\">slepemapy{zavinac}googlegroups.com</span>."
+msgstr ""
+
 #: static/js/services.js:154
 msgid "O prjektu"
 msgstr "Über das Projekt"
 
+#: static/tpl/about.html:2
+msgid "O projektu"
+msgstr ""
+
 #: static/js/services.js:346
 msgid "Oblasti"
 msgstr "Gebiete"
+
+#: static/tpl/about.html:114
+msgid "Ocenění"
+msgstr ""
 
 #: static/js/directives.js:16 static/js/map.js:266
 msgid "Odhad znalosti"
@@ -142,6 +223,20 @@ msgstr "fortfahren"
 
 #: static/js/directives.js:285
 msgid "Pokud problém přetrval zkuste to znovu později nebo"
+msgstr ""
+
+#: static/tpl/about.html:68
+msgid ""
+"Pokud se chcete zapojit do překládání Slepých map, můžete tak učinit na \n"
+"      <a href=\"https://www.transifex.com/adaptive-learning/slepemapycz/\">\n"
+"      Transifex.com stránce projektu</a>."
+msgstr ""
+
+#: static/tpl/about.html:41
+msgid ""
+"Pokud studujete na FI a máte zájem se zapojit do vývoje podobného typu systémů,\n"
+"    případně pokud máte zájem o výzkumnou spolupráci, kontaktujte\n"
+"    <a href=\"http://www.muni.cz/people/4297\">Radka Pelánka</a>."
 msgstr ""
 
 #: static/js/services.js:260
@@ -185,6 +280,10 @@ msgstr "Kartenübersicht"
 msgid "Přehled znalostí uživatele"
 msgstr "Übersicht über die Kenntnisse des Benutzers"
 
+#: static/tpl/about.html:53
+msgid "Překlady"
+msgstr ""
+
 #: static/tpl/map_tpl.html:24
 msgid "Přiblížit mapu můžete i kolečkem myši nebo dotykovým gestem."
 msgstr ""
@@ -209,6 +308,17 @@ msgstr "Teilen Sie Ihr Profil mit"
 msgid "Slepé Mapy"
 msgstr "Stumme Karten"
 
+#: static/tpl/about.html:11
+msgid ""
+"Slepé mapy jsou vyvíjeny na <a href=\"http://www.fi.muni.cz/\">\n"
+"    Fakultě informatiky Masarykovy univerzity</a>, \n"
+"    konkrétně v rámci skupiny <a href=\"http://www.fi.muni.cz/adaptivelearning/\">Adaptive Learning</a>."
+msgstr ""
+
+#: static/tpl/about.html:76
+msgid "Soukromí"
+msgstr ""
+
 #: static/tpl/homepage.html:83
 msgid "Specializovaný systém"
 msgstr "Spezialisiertes System"
@@ -225,7 +335,7 @@ msgstr "Bundesländer"
 msgid "Správné odpovědi"
 msgstr "Richtige Antworten"
 
-#: static/js/controllers.js:274 static/js/services.js:342
+#: static/js/controllers.js:281 static/js/services.js:342
 msgid "Státy"
 msgstr "Staaten"
 
@@ -273,7 +383,7 @@ msgstr "Lernen aus Daten"
 msgid "Učení z dat - text"
 msgstr "Die App lernt aus den Daten aller Benutzer. Die Auswahl der Fragen basiert auf diesen Daten und nicht auf den Kenntnissen eines Geographieexperten. Es erkennt ob es allgemein schwieriger ist Kenia oder Nigerien zu erkennen, und passt die Fragen dazu an."
 
-#: static/js/controllers.js:406 static/js/directives.js:276
+#: static/js/controllers.js:413 static/js/directives.js:276
 msgid "V aplikaci bohužel nastala chyba."
 msgstr "Leider ist ein Fehler aufgetreten"
 
@@ -304,6 +414,10 @@ msgstr "Ausgewählt"
 #: static/tpl/view_tpl.html:51
 msgid "Zde zatím nebylo nic procvičováno."
 msgstr "Hier wurde bis jetzt noch nicht geübt."
+
+#: static/tpl/about.html:83
+msgid "Zdroje"
+msgstr ""
 
 #: static/js/filters.js:69
 msgid "Ze zvýrazněných objektů na mapě vyber"
@@ -338,7 +452,7 @@ msgid "další mapy"
 msgstr "Weitere Landkarten"
 
 #: static/js/directives.js:287
-msgid "nám napiště"
+msgid "nám napište"
 msgstr ""
 
 #: static/js/directives.js:282
