--- a/geography/static/po/en.po
+++ b/geography/static/po/en.po
@@ -4,13 +4,51 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
-"PO-Revision-Date: 2015-09-12 17:51+0000\n"
+"PO-Revision-Date: 2015-10-04 19:20+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: English (http://www.transifex.com/adaptive-learning/slepemapycz/language/en/)\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: static/tpl/about.html:93
+msgid "- administrativní členění Itálie, Francie a Španělska"
+msgstr "- administrative division of Italy, France and Spain"
+
+#: static/tpl/about.html:98
+msgid "- města České republiky a Slovenska"
+msgstr "- cities of the Czech Republic and Slovakia"
+
+#: static/tpl/about.html:109
+msgid "- vlaječky ostatních administrativních celků"
+msgstr "- flags of other administrative units"
+
+#: static/tpl/about.html:105
+msgid "- vlaječky států světa a USA"
+msgstr "- flags of countries of the world and the US"
+
+#: static/tpl/about.html:88
+msgid ""
+"- zdroj většiny mapových podkladů (svět, kontinenty,\n"
+"        většina států)"
+msgstr "- the source of most maps (world, continents,\nmost states)"
+
+#: static/tpl/about.html:55
+msgid ""
+"<i class=\"flag-cs\"></i> Česká a <i class=\"flag-en\"></i> Anglická verze\n"
+"        systému je dílem výše uvedených vývojářů."
+msgstr "<i class = \"flag-en\"> </ i> Czech and <i class = \"flag-en\"> </ i>    English version is work of the above mentioned developers."
+
+#: static/tpl/about.html:62
+msgid ""
+"<i class=\"flag-de\"></i> Německý překlad vytvořila Petra Moskva a její\n"
+"        studentky z Gymnázia a Obchodní Akdemie Orlová."
+msgstr "<i class = \"de-flag\"> </ i> The German translation is created by Petra Moskva and her students from Gymnázium a Obchodní Akdemie Orlová."
+
+#: static/tpl/about.html:59
+msgid "<i class=\"flag-es\"></i> Španělský překlad vytvořil Benjamin Valdes."
+msgstr "<i class = \"flag-es\"> </ i> Spanish translation created Benjamin Valdes."
 
 #: static/tpl/homepage.html:76
 msgid "Adaptabilní procvičování"
@@ -28,6 +66,14 @@ msgstr "Profile address"
 msgid "Aktuální úroveň"
 msgstr "Current level"
 
+#: static/tpl/about.html:115
+msgid ""
+"Aplikace byla oceněna v Soutěži \n"
+"      <a href=\"http://www.otevrenadata.cz/\">Společně otevíráme data</a>,\n"
+"       pořádané \n"
+"      <a href=\"http://www.motejl.cz/\">Fondem Otakara Motejla</a>."
+msgstr "Application has been awarded in the Competition\n<a href=\"http://www.otevrenadata.cz/\"> Společně otevíráme data </a>\norganized by\n<a href=\"http://www.motejl.cz/\"> Fund Otakar Motejl </a>."
+
 #: static/js/services.js:347
 msgid "Autonomní společenství"
 msgstr "Autonomous Comuninities"
@@ -44,11 +90,19 @@ msgstr "Do you want another one? See"
 msgid "Chybné odpovědi"
 msgstr "Incorrect answers"
 
+#: static/tpl/about.html:77
+msgid ""
+"Data o odpovědích jsou ukládána a jsou využívána pro výběr vhodných otázek a"
+" pro výzkumné účely. Všechna tato data jsou zpracovávána anonymně. "
+"Přihlašovací údaje (Facebook, Google) jsou použity pouze pro určení identity"
+" při opakovaných návštěvách, jinak se s nimi nepracuje."
+msgstr "Data on responses are stored and are used to select appropriate questions, and for research purposes. All the data is processed anonymously. Login (Facebook, Google) are only used to determine identity during repeated visits, otherwise we do not work with them."
+
 #: static/tpl/user_tpl.html:30
 msgid "E-mail"
 msgstr "E-mail"
 
-#: static/js/controllers.js:393
+#: static/js/controllers.js:400
 msgid "Hledaný profil neexistuje."
 msgstr "The profile does not exist."
 
@@ -68,7 +122,11 @@ msgstr "Lakes"
 msgid "Jméno"
 msgstr "First name"
 
-#: static/js/controllers.js:275
+#: static/tpl/about.html:6
+msgid "Kdo za tím stojí"
+msgstr "Who's behind it"
+
+#: static/js/controllers.js:282
 msgid "Kontinenty"
 msgstr "Continents"
 
@@ -79,6 +137,10 @@ msgstr "Regions"
 #: static/tpl/practice_tpl.html:104
 msgid "Mapa znalostí"
 msgstr "Knowledge map"
+
+#: static/tpl/about.html:16
+msgid "Mezi další projekty této skupiny patří:"
+msgstr "Other projects of this group include:"
 
 #: static/tpl/map_tpl.html:11
 msgid "Moje znalosti"
@@ -96,6 +158,11 @@ msgstr "Cities"
 msgid "Můj profil je veřejný"
 msgstr "My profile is public"
 
+#: static/tpl/about.html:37
+msgid ""
+"Na vývoji Slepých map se podílí především Vít Stanislav a Jan Papoušek."
+msgstr "This app is developed mainly by Vit Stanislav and John Parrot."
+
 #: static/js/directives.js:107
 msgid "Naučeno"
 msgstr "Learned"
@@ -108,13 +175,27 @@ msgstr "Unpracticed"
 msgid "Nevím"
 msgstr "Don't know"
 
+#: static/tpl/about.html:47
+msgid ""
+"Náměty k rozvoji systému zasílejte na \n"
+"    <span class=\"email contact\">slepemapy{zavinac}googlegroups.com</span>."
+msgstr "Suggestions for the development of the system should be sent to\n<span class = \"email contact\"> slepemapy{at}googlegroups.com </ span>."
+
 #: static/js/services.js:154
 msgid "O prjektu"
+msgstr "About"
+
+#: static/tpl/about.html:2
+msgid "O projektu"
 msgstr "About"
 
 #: static/js/services.js:346
 msgid "Oblasti"
 msgstr "Provinces"
+
+#: static/tpl/about.html:114
+msgid "Ocenění"
+msgstr "Avards"
 
 #: static/js/directives.js:16 static/js/map.js:266
 msgid "Odhad znalosti"
@@ -143,6 +224,20 @@ msgstr "Continue"
 #: static/js/directives.js:285
 msgid "Pokud problém přetrval zkuste to znovu později nebo"
 msgstr "If the problem persists try again later or"
+
+#: static/tpl/about.html:68
+msgid ""
+"Pokud se chcete zapojit do překládání Slepých map, můžete tak učinit na \n"
+"      <a href=\"https://www.transifex.com/adaptive-learning/slepemapycz/\">\n"
+"      Transifex.com stránce projektu</a>."
+msgstr "If you want to get involved in translating Outline maps, you can do so on\n<a href=\"https://www.transifex.com/adaptive-learning/slepemapycz/\">\nTransifex.com page the project </a>."
+
+#: static/tpl/about.html:41
+msgid ""
+"Pokud studujete na FI a máte zájem se zapojit do vývoje podobného typu systémů,\n"
+"    případně pokud máte zájem o výzkumnou spolupráci, kontaktujte\n"
+"    <a href=\"http://www.muni.cz/people/4297\">Radka Pelánka</a>."
+msgstr "If you are studying at the FI and want to get involved in the development of this type of systems,\nor if you are interested in research collaboration, contact\n<a href=\"http://www.muni.cz/people/4297\"> Radek Pelánek </a>."
 
 #: static/js/services.js:260
 msgid "Politická mapa"
@@ -185,6 +280,10 @@ msgstr "Maps overview"
 msgid "Přehled znalostí uživatele"
 msgstr "Knowledge overview of user"
 
+#: static/tpl/about.html:53
+msgid "Překlady"
+msgstr "Translations"
+
 #: static/tpl/map_tpl.html:24
 msgid "Přiblížit mapu můžete i kolečkem myši nebo dotykovým gestem."
 msgstr "You can zoom the map with mouse wheel or touch pinch gesture."
@@ -209,6 +308,17 @@ msgstr "Share your profile"
 msgid "Slepé Mapy"
 msgstr "Outline maps"
 
+#: static/tpl/about.html:11
+msgid ""
+"Slepé mapy jsou vyvíjeny na <a href=\"http://www.fi.muni.cz/\">\n"
+"    Fakultě informatiky Masarykovy univerzity</a>, \n"
+"    konkrétně v rámci skupiny <a href=\"http://www.fi.muni.cz/adaptivelearning/\">Adaptive Learning</a>."
+msgstr "Outline Maps are developed at <a href=\"http://www.fi.muni.cz/\">\nFaculty of Informatics, Masaryk University </a>\nspecifically within the group <a href=\"http://www.fi.muni.cz/adaptivelearning/\"> Adaptive Learning </a>."
+
+#: static/tpl/about.html:76
+msgid "Soukromí"
+msgstr "Privacy"
+
 #: static/tpl/homepage.html:83
 msgid "Specializovaný systém"
 msgstr "Specialized system"
@@ -225,7 +335,7 @@ msgstr "Federal states"
 msgid "Správné odpovědi"
 msgstr "Correct answers"
 
-#: static/js/controllers.js:274 static/js/services.js:342
+#: static/js/controllers.js:281 static/js/services.js:342
 msgid "Státy"
 msgstr "States"
 
@@ -273,7 +383,7 @@ msgstr "Data mining"
 msgid "Učení z dat - text"
 msgstr "The application learns from data of all users. Question choice is based on this data, instead of being based on knowledge of an geography expert who \"knows\" whether it's generally more difficult to know Kenya or Nigeria."
 
-#: static/js/controllers.js:406 static/js/directives.js:276
+#: static/js/controllers.js:413 static/js/directives.js:276
 msgid "V aplikaci bohužel nastala chyba."
 msgstr "Unfortunately there has been an error in the app."
 
@@ -304,6 +414,10 @@ msgstr "Selected"
 #: static/tpl/view_tpl.html:51
 msgid "Zde zatím nebylo nic procvičováno."
 msgstr "Nothing has been practiced here."
+
+#: static/tpl/about.html:83
+msgid "Zdroje"
+msgstr "Sources"
 
 #: static/js/filters.js:69
 msgid "Ze zvýrazněných objektů na mapě vyber"
@@ -338,7 +452,7 @@ msgid "další mapy"
 msgstr "more maps"
 
 #: static/js/directives.js:287
-msgid "nám napiště"
+msgid "nám napište"
 msgstr "write to us"
 
 #: static/js/directives.js:282
