--- a/geography/static/po/es.po
+++ b/geography/static/po/es.po
@@ -3,13 +3,51 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
-"PO-Revision-Date: 2015-09-12 17:32+0000\n"
+"PO-Revision-Date: 2015-10-04 19:20+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: Spanish (http://www.transifex.com/adaptive-learning/slepemapycz/language/es/)\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: static/tpl/about.html:93
+msgid "- administrativní členění Itálie, Francie a Španělska"
+msgstr ""
+
+#: static/tpl/about.html:98
+msgid "- města České republiky a Slovenska"
+msgstr ""
+
+#: static/tpl/about.html:109
+msgid "- vlaječky ostatních administrativních celků"
+msgstr ""
+
+#: static/tpl/about.html:105
+msgid "- vlaječky států světa a USA"
+msgstr ""
+
+#: static/tpl/about.html:88
+msgid ""
+"- zdroj většiny mapových podkladů (svět, kontinenty,\n"
+"        většina států)"
+msgstr ""
+
+#: static/tpl/about.html:55
+msgid ""
+"<i class=\"flag-cs\"></i> Česká a <i class=\"flag-en\"></i> Anglická verze\n"
+"        systému je dílem výše uvedených vývojářů."
+msgstr ""
+
+#: static/tpl/about.html:62
+msgid ""
+"<i class=\"flag-de\"></i> Německý překlad vytvořila Petra Moskva a její\n"
+"        studentky z Gymnázia a Obchodní Akdemie Orlová."
+msgstr ""
+
+#: static/tpl/about.html:59
+msgid "<i class=\"flag-es\"></i> Španělský překlad vytvořil Benjamin Valdes."
+msgstr ""
 
 #: static/tpl/homepage.html:76
 msgid "Adaptabilní procvičování"
@@ -27,6 +65,14 @@ msgstr "Dirección de perfil"
 msgid "Aktuální úroveň"
 msgstr "Nivel actual"
 
+#: static/tpl/about.html:115
+msgid ""
+"Aplikace byla oceněna v Soutěži \n"
+"      <a href=\"http://www.otevrenadata.cz/\">Společně otevíráme data</a>,\n"
+"       pořádané \n"
+"      <a href=\"http://www.motejl.cz/\">Fondem Otakara Motejla</a>."
+msgstr ""
+
 #: static/js/services.js:347
 msgid "Autonomní společenství"
 msgstr "Comunidades Autónomas"
@@ -43,11 +89,19 @@ msgstr "¿Quieres ver otros? ver "
 msgid "Chybné odpovědi"
 msgstr "Respuestas incorrectas"
 
+#: static/tpl/about.html:77
+msgid ""
+"Data o odpovědích jsou ukládána a jsou využívána pro výběr vhodných otázek a"
+" pro výzkumné účely. Všechna tato data jsou zpracovávána anonymně. "
+"Přihlašovací údaje (Facebook, Google) jsou použity pouze pro určení identity"
+" při opakovaných návštěvách, jinak se s nimi nepracuje."
+msgstr ""
+
 #: static/tpl/user_tpl.html:30
 msgid "E-mail"
 msgstr "correo electrónico"
 
-#: static/js/controllers.js:393
+#: static/js/controllers.js:400
 msgid "Hledaný profil neexistuje."
 msgstr ""
 
@@ -67,7 +121,11 @@ msgstr "Lagos"
 msgid "Jméno"
 msgstr "Nombre"
 
-#: static/js/controllers.js:275
+#: static/tpl/about.html:6
+msgid "Kdo za tím stojí"
+msgstr ""
+
+#: static/js/controllers.js:282
 msgid "Kontinenty"
 msgstr "Continentes"
 
@@ -78,6 +136,10 @@ msgstr "Regiones"
 #: static/tpl/practice_tpl.html:104
 msgid "Mapa znalostí"
 msgstr "Mapa de conocimiento"
+
+#: static/tpl/about.html:16
+msgid "Mezi další projekty této skupiny patří:"
+msgstr ""
 
 #: static/tpl/map_tpl.html:11
 msgid "Moje znalosti"
@@ -95,6 +157,11 @@ msgstr "Ciudades"
 msgid "Můj profil je veřejný"
 msgstr ""
 
+#: static/tpl/about.html:37
+msgid ""
+"Na vývoji Slepých map se podílí především Vít Stanislav a Jan Papoušek."
+msgstr ""
+
 #: static/js/directives.js:107
 msgid "Naučeno"
 msgstr "Aprendido"
@@ -107,13 +174,27 @@ msgstr "Sin Practicar"
 msgid "Nevím"
 msgstr "No sé"
 
+#: static/tpl/about.html:47
+msgid ""
+"Náměty k rozvoji systému zasílejte na \n"
+"    <span class=\"email contact\">slepemapy{zavinac}googlegroups.com</span>."
+msgstr ""
+
 #: static/js/services.js:154
 msgid "O prjektu"
 msgstr "Sobre"
 
+#: static/tpl/about.html:2
+msgid "O projektu"
+msgstr ""
+
 #: static/js/services.js:346
 msgid "Oblasti"
 msgstr "Provincias"
+
+#: static/tpl/about.html:114
+msgid "Ocenění"
+msgstr ""
 
 #: static/js/directives.js:16 static/js/map.js:266
 msgid "Odhad znalosti"
@@ -141,6 +222,20 @@ msgstr "Continuar"
 
 #: static/js/directives.js:285
 msgid "Pokud problém přetrval zkuste to znovu později nebo"
+msgstr ""
+
+#: static/tpl/about.html:68
+msgid ""
+"Pokud se chcete zapojit do překládání Slepých map, můžete tak učinit na \n"
+"      <a href=\"https://www.transifex.com/adaptive-learning/slepemapycz/\">\n"
+"      Transifex.com stránce projektu</a>."
+msgstr ""
+
+#: static/tpl/about.html:41
+msgid ""
+"Pokud studujete na FI a máte zájem se zapojit do vývoje podobného typu systémů,\n"
+"    případně pokud máte zájem o výzkumnou spolupráci, kontaktujte\n"
+"    <a href=\"http://www.muni.cz/people/4297\">Radka Pelánka</a>."
 msgstr ""
 
 #: static/js/services.js:260
@@ -184,6 +279,10 @@ msgstr "Todos los mapas"
 msgid "Přehled znalostí uživatele"
 msgstr "Visión general del conocimiento del usuario"
 
+#: static/tpl/about.html:53
+msgid "Překlady"
+msgstr ""
+
 #: static/tpl/map_tpl.html:24
 msgid "Přiblížit mapu můžete i kolečkem myši nebo dotykovým gestem."
 msgstr ""
@@ -208,6 +307,17 @@ msgstr "Comparte tu perfil"
 msgid "Slepé Mapy"
 msgstr "Contorno de Mapas"
 
+#: static/tpl/about.html:11
+msgid ""
+"Slepé mapy jsou vyvíjeny na <a href=\"http://www.fi.muni.cz/\">\n"
+"    Fakultě informatiky Masarykovy univerzity</a>, \n"
+"    konkrétně v rámci skupiny <a href=\"http://www.fi.muni.cz/adaptivelearning/\">Adaptive Learning</a>."
+msgstr ""
+
+#: static/tpl/about.html:76
+msgid "Soukromí"
+msgstr ""
+
 #: static/tpl/homepage.html:83
 msgid "Specializovaný systém"
 msgstr "Sistema Especializado"
@@ -224,7 +334,7 @@ msgstr "Estados"
 msgid "Správné odpovědi"
 msgstr "Respuestas correctas"
 
-#: static/js/controllers.js:274 static/js/services.js:342
+#: static/js/controllers.js:281 static/js/services.js:342
 msgid "Státy"
 msgstr "Estados"
 
@@ -272,7 +382,7 @@ msgstr "Minería de Datos"
 msgid "Učení z dat - text"
 msgstr "El programa aprende de todas las personas que lo usan. La elección de preguntas que el programa presenta se basan en esta información. De esta forma, se tiene mejores estimados de dificultad para los usuarios, ya que en vez de que un experto dicte la dificultad, los usuarios definen el nivel con su desempeño. Así, cada quién ayuda a decidir qué es más fácil, sí las ciudades de Kenia o los ríos de Nigeria. "
 
-#: static/js/controllers.js:406 static/js/directives.js:276
+#: static/js/controllers.js:413 static/js/directives.js:276
 msgid "V aplikaci bohužel nastala chyba."
 msgstr "Unfortunately there has been an error in the app."
 
@@ -303,6 +413,10 @@ msgstr "Seleccionado"
 #: static/tpl/view_tpl.html:51
 msgid "Zde zatím nebylo nic procvičováno."
 msgstr "No se ha practido aquí."
+
+#: static/tpl/about.html:83
+msgid "Zdroje"
+msgstr ""
 
 #: static/js/filters.js:69
 msgid "Ze zvýrazněných objektů na mapě vyber"
@@ -337,7 +451,7 @@ msgid "další mapy"
 msgstr "más mapas"
 
 #: static/js/directives.js:287
-msgid "nám napiště"
+msgid "nám napište"
 msgstr ""
 
 #: static/js/directives.js:282
