--- a/conf/locale/ru/LC_MESSAGES/django.po
+++ b/conf/locale/ru/LC_MESSAGES/django.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-02 15:15+0000\n"
-"PO-Revision-Date: 2016-02-05 15:47+0000\n"
-"Last-Translator: Дарья Пожидаева <dasha.anime@gmail.com>\n"
+"PO-Revision-Date: 2016-02-07 06:26+0000\n"
+"Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: Russian (http://www.transifex.com/adaptive-learning/slepemapycz/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
